<resources>
    <string name="app_name">WalletApp</string>
    <string name="accept">ACCEPT</string>
    <string name="cancel">CANCEL</string>
    <string name="description">DESCRIPTION</string>
    <string name="category">CATEGORY</string>
    <string name="date">DATE</string>
    <string name="amount">AMOUNT</string>
    <string name="name">NAME</string>
    <string name="walletapp">WalletApp</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>